<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_week"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="#f3f3f3"
    android:minHeight="30dp"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    tools:ignore="HardcodedText">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sun"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mon"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tue"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wed"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thu"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fri"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sat"
        android:textColor="#e1e1e1"
        android:textSize="16sp" />
</merge>