<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.ui.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:id="@+id/iv_icon"/>

        <Button
            android:id="@+id/btn_get"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_fff_25"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="进入首页"
            android:textColor="#999999"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:background="@drawable/loginbg">

        <View
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:id="@+id/view_status"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/tv_xs"
            android:scaleType="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_xs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_0078ff_5"
            android:textColor="#fff"
            android:text="学生端"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/user_login" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/iv_delete"
                android:layout_toRightOf="@+id/iv_user"
                android:background="@null"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:lines="1"
                android:text=""
                android:textColorHint="#cacaca"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/vector_delete"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="#0090ff" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/iv_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/pass_login" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/iv_eyes"
                android:layout_toRightOf="@+id/iv_pass"
                android:background="@null"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#cacaca"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_eyes"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@drawable/eyes_close"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="#0090ff" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_login_0078ff"
            android:text="@string/action_sign_in"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30">

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/register_Prompt"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_below="@+id/tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="#0078ff" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/help_login"
                android:background="#fff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6a6a6a"
                android:minWidth="50dp"
                android:text="@string/forget_passwrod"
                android:textSize="12sp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0090ff"
                android:minWidth="50dp"
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="©"
                android:layout_centerVertical="true"
                android:textSize="10sp"
                android:gravity="center"/>

            <TextView
                android:layout_toRightOf="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ccwqkj"
                android:textSize="12sp"
                android:layout_marginLeft="5dp"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
